2006-02-12  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (serve_connections): Revert garbage that I
	accidentally checked in last time...

2006-02-12  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Add things done since last time I did this...

2006-02-12  Matthew Gregan  <kinetik@orcon.net.nz>

	* {cset,paths,revision,roster,sanity,vocab}.{cc,hh}: GCC 4.1
	compile fixes.

2006-02-11  Richard Levitte  <richard@levitte.org>

	* NEWS: Removed my notice about netsync, as I just noticed it
	was already mentioned under Bugs:.

2006-02-11  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, debian/changelog, monotone.spec:
	* win32/monotone.iss: Bump version to 0.26pre2.

2006-02-11  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Add mention of validate_commit_message.

2006-02-11  Blake Kaplan <mrbkap@gmail.com>

	* monotone.texi (Hooks): Added new subsection about validation
	hooks, and describe validate_commit_message in it.

	* std_hooks.lua (validate_commit_message): Change the second
	argument to match the documentation.

2006-02-11  Matt Johnston  <matt@ucc.asn.au>

	* database.hh: increase checkpoint batch size from 100 to 1000

2006-02-11  Matt Johnston  <matt@ucc.asn.au>

	* NEWS: Fix rename example.

2006-02-11  Richard Levitte  <richard@levitte.org>

	* NEWS: Update with the netsync change.

2006-02-11  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Draft for 0.26pre2.

2006-02-11  Richard Levitte  <richard@levitte.org>

	* netsync.cc (serve_connections): Enclose more or less everything
	in a try-catch block to catch if using IPv6 failed, and to try
	with just IPv4 in that case.  This is important for those who
	copy a IPv6-enabled binary to a system that doesn't use IPv6.

	* po/sv.po: Adapt translation to the newly changed messages.

2006-02-10  Derek Scherger  <derek@echologic.com>

	* tests/t_drop_missing.at:
	* tests/t_rename.at:
	* work.cc (visit_file): attempt to improve a couple of messages;
	remove some unrequired \n's
	