@@ -1,3 +1,11 @@
+2006-02-24  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	* netcmd.cc: Ignore protocol version field on usher_cmd packets. It
+	should now be possible to use an usher to redirect connections based
+	on netsync version.
+	* netcmd.hh: Remove unused netcmd::get_version() and
+	unused/unimplemented netcmd::netcmd(u8 version).
+
 2006-02-12  Nathaniel Smith  <njs@pobox.com>
 
 	* netsync.cc (serve_connections): Revert garbage that I
